// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Characters Robot renders confusion marks and flower if female fox is in default pose 1`] = `
.c0 {
  margin: 14rem 0 3rem 0;
  position: relative;
}

<div
  className="c0"
>
  <FoxArtwork
    pose="default"
  />
  <ConfusionMarks />
  <GenderFlower />
</div>
`;

exports[`COMPONENT - Characters Robot renders confusion marks if fox is in default pose 1`] = `
.c0 {
  margin: 14rem 0 3rem 0;
  position: relative;
}

<div
  className="c0"
>
  <FoxArtwork
    pose="default"
  />
  <ConfusionMarks />
</div>
`;

exports[`COMPONENT - Characters Robot renders correctly with default props 1`] = `
.c0 {
  margin: 14rem 0 3rem 0;
  position: relative;
}

<div
  className="c0"
>
  <FoxArtwork
    pose="default"
  />
  <ConfusionMarks />
</div>
`;

exports[`COMPONENT - Characters Robot renders flower if female gender is passed 1`] = `
.c0 {
  margin: 14rem 0 3rem 0;
  position: relative;
}

<div
  className="c0"
>
  <FoxArtwork
    pose="default"
  />
  <ConfusionMarks />
  <GenderFlower />
</div>
`;
